fixed alignment issue

--- a/src/app/components/layout/certificate-base-login/certificate-base-login.component.css
+++ b/src/app/components/layout/certificate-base-login/certificate-base-login.component.css
@@ -9,7 +9,3 @@
 .is-fullwidth {
     width: 100%;
 }
-
-.hide-row {
-   display: none;
-}
